# fastapi-coding-agent

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
agent/: __init__.py  __main__.py  config.py  context.py  harness.py  llm.py  memory.py  modes.py  observability.py  policy.py  providers.py  state.py
agent/agents/: __init__.py  explorer.py  implementer.py  orchestrator.py  researcher.py  reviewer.py  tester.py
agent/rag/: __init__.py  ingest.py  retrieve.py  store.py
agent/tools/: __init__.py  base.py  rag.py
config/: agent.config.yaml
docs/: INFORME.md  PLAN-DEMOS.md
docs/evidence/: demo1-analyze-raw.txt  demo1-analyze-traced.txt  demo1-traced-raw.txt  demo2-feature-raw.txt  demo2-health-memory-traced.txt  demo3-insufficient-evidence-traced.txt  demo3-memory-raw.txt  demo4-loop-detection-traced.txt
tests/: conftest.py  test_context.py  test_explorer.py  test_harness.py  test_implementer.py  test_memory.py  test_modes.py  test_observability.py  test_orchestrator.py  test_policy.py  test_providers.py  test_rag_ingest.py  test_rag_retrieve.py  test_rag_search_tool.py  test_researcher.py  test_reviewer.py  test_smoke.py  test_tester.py  test_tools.py
